--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
-<script type="text/javascript" src="js/script.js"></script>    
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
